--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ html {
 }
 .bg {
   /* The image used */
-  /* background-image: url("./assets/fundo2.png"); */
+  /* background-image: url("./assets/fundo2.webp"); */
 
   /* Full height */
   height: 100%;
